--- a/Sources/OpenKey/win32/OpenKey/OpenKey/OpenKey.rc
+++ b/Sources/OpenKey/win32/OpenKey/OpenKey/OpenKey.rc
@@ -211,7 +211,7 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,151,88,123,10
     CONTROL         "Loại trừ ứng dụng",IDC_CHECK_EXCLUDE_APPS,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,151,106,65,10
-    PUSHBUTTON      "...",IDC_BUTTON_MANAGE_EXCLUDED_APPS,218,105,15,12
+    PUSHBUTTON      "...",IDC_BUTTON_MANAGE_EXCLUDED_APPS,230,105,15,12
 END
 
 IDD_DIALOG_TAB_MACRO DIALOGEX 0, 0, 299, 177
@@ -287,15 +287,19 @@ BEGIN
     PUSHBUTTON      "Mã nguồn...",IDC_BUTTON_GO_SOURCE_CODE,226,91,50,14
 END
 
-IDD_DIALOG_EXCLUDED_APPS DIALOGEX 0, 0, 350, 280
+IDD_DIALOG_EXCLUDED_APPS DIALOGEX 0, 0, 380, 300
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Quản lý ứng dụng loại trừ - OpenKey"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    CONTROL         "",IDC_LIST_EXCLUDED_APPS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,336,230
-    PUSHBUTTON      "Thêm ứng dụng hiện tại",IDC_BUTTON_ADD_CURRENT_APP,7,245,90,20
-    PUSHBUTTON      "Xóa",IDC_BUTTON_DELETE_APP,105,245,50,20
-    DEFPUSHBUTTON   "Đóng",IDOK,293,245,50,20
+    LTEXT           "Danh sách:",IDC_STATIC,7,7,40,8
+    CONTROL         "",IDC_LIST_EXCLUDED_APPS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,18,366,220
+    LTEXT           "Tên ứng dụng (vd: notepad.exe):",IDC_STATIC,7,245,110,8
+    EDITTEXT        IDC_EDIT_APP_NAME,120,243,140,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "Thêm",IDC_BUTTON_ADD_MANUAL,265,243,50,14
+    PUSHBUTTON      "Thêm ứng dụng hiện tại",IDC_BUTTON_ADD_CURRENT_APP,7,265,110,20
+    PUSHBUTTON      "Xóa",IDC_BUTTON_DELETE_APP,125,265,60,20
+    DEFPUSHBUTTON   "Đóng",IDOK,323,265,50,20
 END
 
 
