--- a/Sources/OpenKey/win32/OpenKey/OpenKey/OpenKey.rc
+++ b/Sources/OpenKey/win32/OpenKey/OpenKey/OpenKey.rc
@@ -431,8 +431,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,0,5,0
- PRODUCTVERSION 2,0,5,0
+ FILEVERSION 2,0,6,0
+ PRODUCTVERSION 2,0,6,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -447,14 +447,14 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "The OpenKey Project"
-            VALUE "FileDescription", "OpenKey - Bộ gõ Tiếng Việt nguồn mở"
-            VALUE "FileVersion", "2.0.5.0"
+            VALUE "CompanyName", "OpenKey"
+            VALUE "FileDescription", "OpenKey"
+            VALUE "FileVersion", "2.0.6.0"
             VALUE "InternalName", "OpenKey.exe"
-            VALUE "LegalCopyright", "Copyright (C) 2019 - Mai Vũ Tuyên"
+            VALUE "LegalCopyright", "Copyright (C) 2020"
             VALUE "OriginalFilename", "OpenKey.exe"
             VALUE "ProductName", "OpenKey"
-            VALUE "ProductVersion", "2.0.5.0"
+            VALUE "ProductVersion", "2.0.6.0"
         END
     END
     BLOCK "VarFileInfo"
