--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -2,9 +2,9 @@ name: macOS Build
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "fix/typing_with_other_lang" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "fix/typing_with_other_lang" ]
   workflow_dispatch:
 
 env:
