--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,22 @@
 /Sources/OpenKey/win32/OpenKey/OpenKey/x64/Debug
 /Sources/OpenKey/win32/OpenKey/OpenKey/x64/Release
 /Sources/OpenKey/win32/OpenKey/OpenKeyUpdate/x64/Release
+
+# Sciter SDK binaries (downloaded separately)
+/windows/
+
+# Windows Zone.Identifier files
+*:Zone.Identifier
+
+# Backup/temp files
+*copy*.css
+*.bak
+*.tmp
+
+# Release/Debug output
+*.exe
+*.dll
+*.pdb
+*.obj
+*.ilk
+*.idb
