--- a/Sources/OpenKey/win32/OpenKey/OpenKey/OpenKey.vcxproj.filters
+++ b/Sources/OpenKey/win32/OpenKey/OpenKey/OpenKey.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="MacroDialog.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ExcludedAppsDialogSciter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -135,6 +138,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MacroDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ExcludedAppsDialogSciter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
